[gd_scene format=3 uid="uid://prasoke43m86"]

[ext_resource type="Script" uid="uid://drtt2lciac6vh" path="res://items/picker_upper.gd" id="1_s5c4p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b0or2"]
radius = 13.152946

[node name="Picker_Upper" type="Area2D" unique_id=1410964439]
script = ExtResource("1_s5c4p")

[node name="cls_picker_upper" type="CollisionShape2D" parent="." unique_id=342628014]
shape = SubResource("CircleShape2D_b0or2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
